--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+arrayvec = "0.7.6"
 bevy = { version = "0.17" }
 rand = "0.9"
 # Compile out low-severity logs to improve performance.
