modify release vars

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -45,24 +45,24 @@ concurrency:
 # Configure the release workflow by editing the following values.
 env:
   # The base filename of the binary produced by `cargo build`.
-  cargo_build_binary_name: maze
+  cargo_build_binary_name: BevyMaze
 
   # The path to the assets directory.
   assets_path: assets
 
   # The itch.io project to upload to in the format `user-name/project-name`.
   # There will be no upload to itch.io if this is commented out.
-  itch_page: jfeaver/maze
+  itch_page: jfeaver/bevy-maze
 
   # The ID of the app produced by this workflow.
   # Applies to macOS releases.
   # Must contain only A-Z, a-z, 0-9, hyphen, and period: <https://developer.apple.com/documentation/bundleresources/information_property_list/cfbundleidentifier>.
-  app_id: jfeaver.maze
+  app_id: jfeaver.bevy-maze
 
   # The base filename of the binary in the package produced by this workflow.
   # Applies to Windows, macOS, and Linux releases.
   # Defaults to `cargo_build_binary_name` if commented out.
-  #app_binary_name: maze
+  # app_binary_name: maze
 
   # The name of the `.zip` or `.dmg` file produced by this workflow.
   # Defaults to `app_binary_name` if commented out.
